# imperial

./: .env.example  .gitignore  README.md  compose.yaml  justfile  manage.py  package-lock.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
compose/: Dockerfile  start
docker/dev/: Dockerfile  start
extras/: template_marimo.py
imperial/: asgi.py  settings.py  urls.py  wsgi.py
imperial/base/: apps.py  urls.py  views.py
imperial/static/css/: output.css
imperial/templates/base/: home.html
