[tool.poetry]
name = "imperial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
marimo = "^0.2.4"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
